build(packager): add Leyden jpackage Maven plugin